--- a/view/game.html
+++ b/view/game.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="../css/game.css">
 </head>
 <body>
-	
+	<div id='game_region'>
+		<div id='box'></div>
+	</div>
+	<script src="../javascript/game.js"></script>
 </body>
 </html>
