--- a/view/game.html
+++ b/view/game.html
@@ -14,6 +14,6 @@
 	<div id='game_region'>
 		<div id='box'></div>
 	</div>
-	<script src="../javascript/game.js"></script>
+	<script type="module" src="../javascript/game.js"></script>
 </body>
 </html>
