--- a/view/game.html
+++ b/view/game.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 	<div id='game_region'>
-		<div id='box'></div>
+		<div id='box-0' class="box"></div>
 	</div>
+	<div id="btn">test</div>
 	<script type="module" src="../javascript/game.js"></script>
 </body>
 </html>
