chage width based on prev

--- a/css/game.css
+++ b/css/game.css
@@ -10,5 +10,10 @@
   height: 48px;
   background-color: white;
   position: relative;
+  left: 0px;
+}
+.box-init {
+  width: 48px;
+  height: 48px;
   left: 280px;
 }
