--- a/view/game.html
+++ b/view/game.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div id='game_region'>
-		<div id='box-0' class="box"></div>
+		<div id='box-0' class="box box-init"></div>
 	</div>
 	<div id="btn">test</div>
 	<script type="module" src="../javascript/game.js"></script>
