--- a/css/game.css
+++ b/css/game.css
@@ -1,10 +1,11 @@
 #game_region {
-  width: 600px;
+  width: 400px;
   height: 400px;
   background-image: url(../images/bg_game_ground-to-sky.jpeg);
   background-size: 120% 300%;
   background-position: left 0 bottom 0;
-  padding-top: 280px;
+  padding-top: 400px;
+  padding-bottom: 280px;
   overflow: hidden;
   transition: 0.5s;
 }
@@ -12,12 +13,13 @@
 .box {
   width: 48px;
   height: 48px;
-  background-color: white;
+  background-color: lightcyan;
+  opacity: 1;
   position: relative;
   left: 0px;
 }
 .box-init {
   width: 48px;
   height: 48px;
-  left: 280px;
+  left: 180px;
 }
