--- a/view/game.html
+++ b/view/game.html
@@ -11,10 +11,12 @@
 	<link rel="stylesheet" href="../css/game.css">
 </head>
 <body>
-	<div id='game_region'>
-		<div id='box-0' class="box box-init"></div>
+	<div id="app" class="app">
+		<div id='game_region'>
+			<div id='box-0' class="box box-init"></div>
+		</div>
+		<div id="btn">test</div>
 	</div>
-	<div id="btn">test</div>
 	<script type="module" src="../javascript/game.js"></script>
 </body>
 </html>
