--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,6 @@
 #game_region {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   background-image: url(../images/bg_game_ground-to-sky.jpeg);
   background-size: 120% 300%;
   background-position: left 0 bottom 0;
@@ -11,15 +11,14 @@
 }
 
 .box {
-  width: 48px;
-  height: 48px;
-  background-color: lightcyan;
+  width: 60px;
+  height: 40px;
+  background-color: black;
   opacity: 1;
   position: relative;
-  left: 0px;
 }
 .box-init {
-  width: 48px;
-  height: 48px;
-  left: 180px;
+  width: 60px;
+  height: 40px;
+  left: 295px;
 }
