--- a/css/staticPage.css
+++ b/css/staticPage.css
@@ -5,6 +5,14 @@
     rgba(4, 202, 255, 1)
   );
 }
+.result {
+  padding-top: 110px;
+  background-image: linear-gradient(
+    360deg,
+    rgba(247, 93, 139, 1),
+    rgba(254, 220, 64, 1)
+  );
+}
 .icon-image {
   width: 50px;
   height: 50px;
@@ -137,4 +145,10 @@
 }
 .box_face-left {
   transform: translateX(-100px) rotateY(-90deg);
+}
+.result_best-score_icon {
+  display: inline;
+  width: 50px;
+  margin-right: 5px;
+  margin-bottom: -6px;
 }
