--- a/view/result.html
+++ b/view/result.html
@@ -9,8 +9,40 @@
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/basic.css">
 	<link rel="stylesheet" href="../css/staticPage.css">
+
+	<!-- google fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+	
 </head>
 <body>
-	
+	<div class="app result">
+		<main class="main">
+			<h1 id="result_last-score" class="main_title result_last-score">stack</h1>
+			<h2 class="main_best-score"><img class="icon-image result_best-score_icon" src="../images/icon_game_crown.svg"><span id="best-score"></span></h2>
+			<div class="box">
+				<div class="box_face box_face-top result_try-again">
+					<p class="box_face_text">try again</p>
+				</div>
+				<div class="box_face box_face-bottom result_try-again">
+					<p class="box_face_text">try again</p>
+				</div>
+				<div class="box_face box_face-front result_mode">
+					<p class="box_face_text">mode</p>
+				</div>
+				<div class="box_face box_face-back result_mode">
+					<p class="box_face_text">mode</p>
+				</div>
+				<div class="box_face box_face-left result_score">
+					<p class="box_face_text">score</p>
+				</div>
+				<div class="box_face box_face-right result_score">
+					<p class="box_face_text">score</p>
+				</div>
+			</div>
+		</main>
+	</div>
+	<script src="../javascript/result.js"></script>
 </body>
 </html>
