--- a/view/game.html
+++ b/view/game.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 	<div id="app" class="app">
-		<div id='game_region'>
-			<div id='box-0' class="box box-init"></div>
+		<div id="game_field" class="game_field">
+			<div id="box-0" class="box box-init"></div>
 		</div>
 		<div id="btn">test</div>
 	</div>
