--- a/css/game.css
+++ b/css/game.css
@@ -1,3 +1,6 @@
+.app {
+  position: relative;
+}
 .game_field {
   width: 100%;
   height: 100%;
@@ -37,4 +40,26 @@
   width: 200px;
   height: 40px;
   left: 225px;
+}
+
+.object {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -40px;
+  left: 0;
+  animation-name: dropObject;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(119deg)
+    brightness(110%) contrast(112%);
+  z-index: 20;
+}
+@keyframes dropObject {
+  0% {
+    top: -40px;
+  }
+  100% {
+    top: 100vh;
+  }
 }
