--- a/css/game.css
+++ b/css/game.css
@@ -46,19 +46,25 @@
   height: 40px;
   position: absolute;
   top: -40px;
-  left: 0;
   animation-name: dropObject;
-  animation-duration: 5s;
   animation-timing-function: linear;
-  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(119deg)
-    brightness(110%) contrast(112%);
   z-index: 20;
 }
 @keyframes dropObject {
   0% {
     top: -40px;
+    transform: rotate3d(1, 1, 1, 0deg);
   }
   100% {
     top: 100vh;
+    transform: rotate3d(1, 1, 1, 360deg);
   }
+}
+.object-white {
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(119deg)
+    brightness(110%) contrast(112%);
+}
+.object-black {
+  filter: invert(0%) sepia(9%) saturate(7465%) hue-rotate(167deg)
+    brightness(103%) contrast(108%);
 }
