--- a/css/game.css
+++ b/css/game.css
@@ -42,17 +42,17 @@
 }
 
 .object {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   position: absolute;
-  top: -40px;
   animation-name: dropObject;
   animation-timing-function: linear;
+  animation-fill-mode: forwards;
   z-index: 20;
 }
 @keyframes dropObject {
   0% {
-    top: -40px;
+    top: -80px;
     transform: rotate3d(1, 1, 1, 0deg);
   }
   100% {
